# partons-example

./: .cproject  .gitignore  .project  .xsec7_vs_xB.dat.swp  CMakeLists.txt  INFRASTRUCTURE.md  build.xml  compile.sh  docker-compose.yml  partons.sh  shell.sh
.docker/: Dockerfile.mysql  Dockerfile.partons  partons-setup-schema.sh
.docker/scripts/: compile_example.sh  run_example.sh
.github/: CODEOWNERS
cmake/Modules/: FindApfel++.cmake  FindElementaryUtils.cmake  FindLHAPDF.cmake  FindNumA++.cmake  FindPARTONS.cmake
data/examples/cff/: .computeSingleKinematicsForDVMPComptonFormFactor.xml.swp  computeManyKinematicsForDDVCSComptonFormFactor.xml  computeManyKinematicsForDVCSComptonFormFactor.xml  computeManyKinematicsForDVMPComptonFormFactor.xml  computeSingleKinematicsForDDVCSComptonFormFactor.xml  computeSingleKinematicsForDVCSComptonFormFactor.xml  computeSingleKinematicsForDVMPComptonFormFactor.xml
data/examples/collinear_distribution/: computeSingleKinematicsForCollinearDistribution.xml
data/examples/evolution/: makeUseOfCollinearDistributionEvolution.xml  makeUseOfCollinearDistributionEvolutionApfel.xml  makeUseOfGPDEvolution.xml  makeUseOfGPDEvolutionApfel.xml  makeUseOfGPDEvolutionVinnikov.xml
data/examples/gpd/: computeManyKinematicsForGPD.xml  computeManyKinematicsForGPD_Test.xml  computeSingleKinematicsForGPD.xml
data/examples/observable/: computeManyKinematicsForDDVCSObservable.xml  computeManyKinematicsForDVCSObservable.xml  computeManyKinematicsForDVMPObservable.xml  computeSingleKinematicsForDDVCSObservable.xml  computeSingleKinematicsForDVCSObservable.xml  computeSingleKinematicsForDVMPObservable.xml  makePlotFileFromDatabaseForObservable.xml
data/examples/other/: changeIntegrationRoutine.xml  demonstrateUnits.xml  makeUseOfGPDEvolution.xml  selectSpecificGPDTypes.xml
include/: Conformal_Moments.h  FTGPD.h  analysis.h  computefourier.h  examples.h  getreplicas.h  leptonCMframe.h  printreplica.h  statistics.h
include/gpd/: GPDANNDD.h  GPDANNDDIntegration.h  GPDANNDDParameter.h  xEqXi_with_pos_replicas.h
include/mellin_moment/: MellinMoment.h  MellinMomentFromGPD.h  MellinMomentKinematic.h  MellinMomentModule.h  MellinMomentResult.h  MellinMomentService.h
include/parton_value/: GluonValue.h  PartonValues.h  QuarkValue.h
plots/: GPDs.py
python_examples/: PyPARTONS_example.py  PyPARTONS_notebook.ipynb  logger.properties  partons.properties
src/: Conformal_Moments.cpp  FTGPD.cpp  Replica_Example.cpp  analysis.cpp  computefourier.cpp  examples.cpp  examples.h  getreplicas.cpp  leptonCMframe.cpp  leptonCMframe.h  main.cpp  printreplica.cpp  statistics.cpp
src/gpd/: GPDANNDD.cpp
src/mellin_moment/: MellinMoment.cpp  MellinMomentFromGPD.cpp  MellinMomentKinematic.cpp  MellinMomentModule.cpp  MellinMomentResult.cpp  MellinMomentService.cpp
src/parton_value/: GluonValue.cpp  PartonValues.cpp  QuarkValue.cpp
test/: .gitignore  make_test.sh
test/compare_files/: CMakeLists.txt
test/compare_files/src/: compare_files.cpp
test/make_file/: CMakeLists.txt
test/make_file/src/: make_file.cpp
test/reference/: file_ref.hdf5
test_reweight/: reweight.cpp
